--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "tmp",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json && tsc -p tsconfig.node.json",
+    "format": "prettier --write --plugin prettier-plugin-svelte src/**/*.svelte"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
@@ -19,9 +20,15 @@
     "tailwindcss": "^3.4.6",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
-  },
-  "dependencies": {
+    "vite": "^5.3.1",
+    "eslint": "^8.57.0",
+    "prettier": "^3.3.3",
+    "@typescript-eslint/parser": "^8.2.0",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier-plugin-svelte": "^3.2.6",
+    "svelte-eslint-parser": "^0.41.0",
+    "svelte-preprocess": "^6.0.2",
     "openai": "^4.56.0"
   }
 }
