--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "prettier-plugin-svelte": "^3.2.6",
     "svelte-eslint-parser": "^0.41.0",
     "svelte-preprocess": "^6.0.2",
-    "openai": "^4.56.0"
+    "openai": "^4.56.0",
+    "svelte-spa-router": "^4.0.1"
   }
 }
