--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@typescript-eslint/parser": "^8.2.0",
     "@typescript-eslint/eslint-plugin": "^8.2.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.43.0",
     "prettier-plugin-svelte": "^3.2.6",
     "svelte-eslint-parser": "^0.41.0",
     "svelte-preprocess": "^6.0.2",
     "openai": "^4.56.0",
-    "svelte-spa-router": "^4.0.1"
+    "svelte-spa-router": "^4.0.1",
+    "svelte-i18n": "^4.0.0"
   }
 }
