--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "svelte-preprocess": "^6.0.2",
     "openai": "^4.56.0",
     "svelte-spa-router": "^4.0.1",
-    "svelte-i18n": "^4.0.0"
+    "svelte-i18n": "^4.0.0",
+    "dotenv": "^16.4.5"
   }
 }
