--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "svelte-spa-router": "^4.0.1",
     "svelte-i18n": "^4.0.0",
     "dotenv": "^16.4.5",
-    "embla-carousel-svelte": "^8.2.1"
+    "clsx": "^2.1.1",
+    "embla-carousel-svelte": "^8.3.0"
   }
 }
