--- a/package.json
+++ b/package.json
@@ -11,31 +11,34 @@
     "format": "prettier --write --plugin prettier-plugin-svelte src/**/*.svelte"
   },
   "devDependencies": {
-    "tailwind-scrollbar-hide": "^1.1.7",
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.2.0",
+    "@typescript-eslint/parser": "^8.2.0",
     "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "dotenv": "^16.4.5",
+    "embla-carousel-svelte": "^8.3.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.43.0",
+    "openai": "^4.56.0",
     "postcss": "^8.4.39",
+    "prettier": "^3.3.3",
+    "prettier-plugin-svelte": "^3.2.6",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
+    "svelte-eslint-parser": "^0.41.0",
+    "svelte-i18n": "^4.0.0",
+    "svelte-preprocess": "^6.0.2",
+    "svelte-spa-router": "^4.0.1",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwindcss": "^3.4.6",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "eslint": "^8.57.0",
-    "prettier": "^3.3.3",
-    "@typescript-eslint/parser": "^8.2.0",
-    "@typescript-eslint/eslint-plugin": "^8.2.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-svelte": "^2.43.0",
-    "prettier-plugin-svelte": "^3.2.6",
-    "svelte-eslint-parser": "^0.41.0",
-    "svelte-preprocess": "^6.0.2",
-    "openai": "^4.56.0",
-    "svelte-spa-router": "^4.0.1",
-    "svelte-i18n": "^4.0.0",
-    "dotenv": "^16.4.5",
-    "clsx": "^2.1.1",
-    "embla-carousel-svelte": "^8.3.0"
+    "vite": "^5.3.1"
+  },
+  "dependencies": {
+    "@supabase/supabase-js": "^2.45.4"
   }
 }
