--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "svelte-i18n": "^4.0.0",
     "dotenv": "^16.4.5",
     "clsx": "^2.1.1",
-    "embla-carousel-svelte": "^8.3.0"
+    "embla-carousel-svelte": "^8.3.0",
+    "kakao.maps.d.ts": "^0.1.40"
   }
 }
