--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,8 @@
     "allowJs": true,
     "checkJs": true,
     "isolatedModules": true,
-    "moduleDetection": "force"
+    "moduleDetection": "force",
+    "types": ["kakao.maps.d.ts"]
   },
   "include": [
     "src/**/*.ts",
