--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-svelte": "^2.43.0",
+    "kakao.maps.d.ts": "^0.1.40",
     "openai": "^4.56.0",
     "postcss": "^8.4.39",
     "prettier": "^3.3.3",
@@ -36,10 +37,10 @@
     "tailwindcss": "^3.4.6",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1",
-    "kakao.maps.d.ts": "^0.1.40"
+    "vite": "^5.3.1"
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.45.4"
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/svelte-query": "^5.59.0"
   }
 }
